# mpc-warp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: run_all_envs.py  run_hydrax_parity.py  run_mujoco_task.py  tutorial_g1_mocap.ipynb  tutorial_mppi_mjviser.ipynb
src/mpc_warp/: __init__.py
src/mpc_warp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mpc_warp/backends/: mujoco_warp_backend.py
src/mpc_warp/core/: costs.py  rollout.py
src/mpc_warp/envs/: hydrax_parity.py  mujoco_env.py  registry.py  task_envs.py
src/mpc_warp/solvers/: mppi.py  mppi_warp.py
src/mpc_warp/tasks/: __init__.py  cart_pole.py  crane.py  double_cart_pole.py  g1_mocap.py  g1_velocity.py  go1_walking.py  humanoid_standup.py  particle.py  pendulum.py  task_base.py  trajectory_task.py  walker.py
src/mpc_warp/tasks/utils/: go1_trot_reference.py
src/mpc_warp/viz/: ghost_overlay.py  mjviser_panel.py  trajectory.py
tests/: test_examples_run.py  test_hydrax_parity.py  test_import.py  test_solver_smoke.py  test_task_solves.py
