[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpc-warp"
version = "0.1.0"
description = "Minimal MPC toolkit with mujoco_warp GPU-parallel rollouts"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "mujoco>=3.1",
  "mujoco_warp",
  "mjviser>=0.0.14",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mpc_warp" = ["models/**/*.xml", "models/**/*.stl", "models/**/*.STL", "models/**/*.png"]

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E741"]  # ambiguous variable names (l, O, I) — common in math code
